feat：增加任务进度指示、任务中止以及技能删除能力

--- a/libs/deepagents-web/deepagents_web/static/index.html
+++ b/libs/deepagents-web/deepagents_web/static/index.html
@@ -22,11 +22,16 @@
             <!-- Chat Panel -->
             <div id="chat-panel" class="panel active">
                 <div class="chat-container">
+                    <div id="chat-progress" class="chat-progress hidden">
+                        <div class="progress-spinner"></div>
+                        <span id="progress-text">Processing...</span>
+                    </div>
                     <div id="messages" class="messages"></div>
                     <div id="todo-list" class="todo-list hidden"></div>
                 </div>
                 <div class="input-container">
                     <textarea id="user-input" placeholder="Type your message..." rows="1"></textarea>
+                    <button id="stop-btn" class="stop-btn hidden">Stop</button>
                     <button id="send-btn" class="send-btn">Send</button>
                 </div>
             </div>
